<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movieFirstFragment"
        android:title="@string/movies_bottom_txt"
        android:icon="@drawable/ic_movie"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tvShowFirstFragment"
        android:title="@string/tv_shows_bottom_txt"
        android:icon="@drawable/ic_tv"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/searchFirstFragment"
        android:title="@string/search_bottom_txt"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/savedFirstFragment"
        android:title="@string/saved_bottom_txt"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profileFirstFragment"
        android:title="@string/profile_bottom_txt"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"/>

</menu>