<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_color"
    tools:context=".ui.movie.MovieFirstFragment">

    <include layout="@layout/app_title_bar_layout"/>

    <EditText
        android:id="@+id/searchMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:inputType="text"
        android:hint="@string/search_movie_title_txt"
        android:textSize="15sp"
        android:textColorHint="#847E7E"
        android:textColor="@color/text_color"
        android:drawableStart="@drawable/ic_search_two"
        android:drawablePadding="10dp"
        android:background="@drawable/outline_tv_search_style"
        android:autofillHints="name"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/now_playing_txt"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="22sp"
                android:textColor="@color/text_color"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNowPlaying"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                tools:listitem="@layout/now_playing_rv"/>

            <View
                android:id="@+id/upComingDivider"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:background="@drawable/divider_now_playing_style" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_txt"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="20sp"
                android:textColor="@color/text_color"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:listitem="@layout/popular_rv"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated_txt"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="20sp"
                android:textColor="@color/text_color"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRated"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:listitem="@layout/top_rated_rv"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_txt"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/satoshi_medium"
                android:textSize="20sp"
                android:textColor="@color/text_color"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpComing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:listitem="@layout/up_coming_rv"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>